--- a/index.html
+++ b/index.html
@@ -48,7 +48,54 @@
         </select>
       </div>
     </section>
-    <section id="search-and-user-bar"></section>
+    <section id="search-and-user-bar" class="
+      w-full h-[99px]
+      bg-[url('./assets/header-bg.png')]
+      relative
+    ">
+      <div class="container flex flex-wrap pt-[22px]">
+        <section id="search-bar" class="mx-auto ml-[371px]">
+          <form action="" class="relative w-[384px]">
+            <input type="text" placeholder="Zoeken" name="" id="" class="w-[384px] h-[42px] py-[12px] pl-[10px] pr-[54px]">
+            <button class="absolute right-[0px] top-[0px] h-[42px] w-[42px] bg-[#5BBEDD] flex items-center justify-center">
+              <svg width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M9.23529 17.4706C13.7835 17.4706 17.4706 13.7835 17.4706 9.23529C17.4706 4.68707 13.7835 1 9.23529 1C4.68707 1 1 4.68707 1 9.23529C1 13.7835 4.68707 17.4706 9.23529 17.4706Z" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+                <path d="M15.0469 15.0471L20.9998 21" stroke="white" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" />
+              </svg>
+            </button>
+          </form>
+        </section>
+
+        <section id="user-actions" class="flex flex-wrap w-[243px] text-[11px] mx-auto mr-0">
+          <article id="info" class="w-1/3 flex flex-wrap justify-center text-white">
+            <button>
+              <svg class="w-full" width="23" height="23" viewBox="0 0 23 23" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M2.3 0H20.7C21.965 0 22.9885 1.035 22.9885 2.3L23 23L18.4 18.4H2.3C1.035 18.4 4.76837e-07 17.365 4.76837e-07 16.1V2.3C4.76837e-07 1.035 1.035 0 2.3 0ZM10.35 13.8H12.65V8.625H10.35V13.8ZM10.35 6.9H12.65V4.6H10.35V6.9Z" fill="white"/>
+              </svg>
+              <p class="w-full text-center">Klantenservice</p>
+            </button>
+          </article>
+
+          <article id="user" class="w-1/3 flex flex-wrap justify-center text-white">
+            <button>
+              <svg class="w-full" width="22" height="22" viewBox="0 0 22 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 2.44444V19.5556C0 20.9 1.08778 22 2.44444 22H19.5556C20.9 22 22 20.9 22 19.5556V2.44444C22 1.1 20.9 0 19.5556 0H2.44444C1.08778 0 0 1.1 0 2.44444ZM14.6667 7.33333C14.6667 9.36222 13.0289 11 11 11C8.97111 11 7.33333 9.36222 7.33333 7.33333C7.33333 5.30444 8.97111 3.66667 11 3.66667C13.0289 3.66667 14.6667 5.30444 14.6667 7.33333ZM3.66667 17.1111C3.66667 14.6667 8.55556 13.3222 11 13.3222C13.4444 13.3222 18.3333 14.6667 18.3333 17.1111V18.3333H3.66667V17.1111Z" fill="white"/>
+              </svg>
+              <p class="w-full text-center">Inloggen</p>
+            </button>
+          </article>
+
+          <article id="cart" class="w-1/3 flex flex-wrap justify-center text-white">
+            <button>
+              <svg class="w-full" width="26" height="22" viewBox="0 0 26 22" fill="none" xmlns="http://www.w3.org/2000/svg">
+                <path d="M19.1573 8.09062L13.9809 0.486828C13.7564 0.162276 13.3782 0 13 0C12.6218 0 12.2436 0.162276 12.0191 0.498419L6.84273 8.09062H1.18182C0.531818 8.09062 0 8.61222 0 9.24974C0 9.35406 0.0118181 9.45838 0.0472727 9.5627L3.04909 20.3077C3.32091 21.2813 4.23091 22 5.31818 22H20.6818C21.7691 22 22.6791 21.2813 22.9627 20.3077L25.9645 9.5627L26 9.24974C26 8.61222 25.4682 8.09062 24.8182 8.09062H19.1573ZM9.45455 8.09062L13 2.99052L16.5455 8.09062H9.45455ZM13 17.3635C11.7 17.3635 10.6364 16.3203 10.6364 15.0453C10.6364 13.7703 11.7 12.7271 13 12.7271C14.3 12.7271 15.3636 13.7703 15.3636 15.0453C15.3636 16.3203 14.3 17.3635 13 17.3635Z" fill="white"/>
+              </svg>
+              <p class="w-full text-center">Winkelmand</p>
+            </button>
+          </article>
+        </section>
+      </div>
+    </section>
     <section id="menu"></section>
   </header>
 
