--- a/index.html
+++ b/index.html
@@ -100,12 +100,14 @@
 
     <section id="menu">
       <nav class="pt-[35px] pb-[32px] text-center max-w-[1140px] mx-auto">
-        <ul class="font-mulish text-[#263250] leading-[20px] text-[20px] font-bold space-x-8">
-          <li class="inline-block"><a href="">Eten</a></li>
-          <li class="inline-block"><a href="">Ramadan</a></li>
-          <li class="inline-block">
+        <ul class="font-mulish text-[#263250] leading-[20px] text-[20px] font-bold">
+          <li class="inline-block px-[12px]"><a href="">Eten</a></li>
+          <li class="inline-block px-[12px]"><a href="">Ramadan</a></li>
+          <li class="inline-block group relative px-[12px]">
             <a href="">Eid</a>
-            <div id="submenu-03" class="absolute w-[651px] h-[315px] bg-white rounded-b-[20px] z-10 pt-[38px]">
+            <img src="./assets/menu-item-hover-bg.png" alt="" class="hidden group-hover:block top-[-20px] left-[0px] absolute w-[78px] h-[58px] z-[100]">
+
+            <div id="submenu-03" class="group-hover:block hidden absolute w-[651px] h-[315px] bg-white rounded-b-[20px] z-10 pt-[38px]">
               <div id="submenu-oceans-top" class="bg-[url('./assets/submenu-oceans-top.png')] h-[9px]"></div>
               <div class="row flex flex-wrap h-[31px] pt-[9px] text-left leading-[18px] font-bold font-mulish text-[15px] text-white bg-[#5BBEDD]">
                 <h3 class="w-1/2 pl-[29px]">Shop op tema</h3>
@@ -144,14 +146,14 @@
               </div>
             </div>
           </li>
-          <li class="inline-block"><a href="">Hajj/Umrah</a></li>
-          <li class="inline-block"><a href="">Huwelijk</a></li>
-          <li class="inline-block"><a href="">Overige</a></li>
-          <li class="inline-block"><a href="">Baby</a></li>
-          <li class="inline-block"><a href="">Kids</a></li>
-          <li class="inline-block"><a href="">Cadeau's</a></li>
-          <li class="inline-block"><a href="">Kaarten</a></li>
-          <li class="inline-block"><a href="">Wonen</a></li>
+          <li class="inline-block px-[12px]"><a href="">Hajj/Umrah</a></li>
+          <li class="inline-block px-[12px]"><a href="">Huwelijk</a></li>
+          <li class="inline-block px-[12px]"><a href="">Overige</a></li>
+          <li class="inline-block px-[12px]"><a href="">Baby</a></li>
+          <li class="inline-block px-[12px]"><a href="">Kids</a></li>
+          <li class="inline-block px-[12px]"><a href="">Cadeau's</a></li>
+          <li class="inline-block px-[12px]"><a href="">Kaarten</a></li>
+          <li class="inline-block px-[12px]"><a href="">Wonen</a></li>
         </ul>
       </nav>
     </section>
