--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
             <a href="">Eid</a>
             <img src="./assets/menu-item-hover-bg.png" alt="" class="hidden group-hover:block top-[-20px] left-[0px] absolute w-[78px] h-[58px] z-[100]">
 
-            <div id="submenu-03" class="group-hover:block hidden absolute w-[651px] h-[315px] bg-white rounded-b-[20px] z-10 pt-[38px]">
+            <div id="submenu-03" class="group-hover:block hidden absolute w-[651px] h-[315px] bg-white rounded-b-[20px] z-10 pt-[34px]">
               <div id="submenu-oceans-top" class="bg-[url('./assets/submenu-oceans-top.png')] h-[9px]"></div>
               <div class="row flex flex-wrap h-[31px] pt-[9px] text-left leading-[18px] font-bold font-mulish text-[15px] text-white bg-[#5BBEDD]">
                 <h3 class="w-1/2 pl-[29px]">Shop op tema</h3>
@@ -161,8 +161,8 @@
 
   <main class="z-0">
     <section class="
-      xl:mb-[47px] xl:h-[400px] xl:bg-cover
-      lg:h-[285px] md:bg-bottom 
+      xl:mb-[47px] xl:h-[400px] xl:bg-cover xl:h-[712px]
+      lg:h-[398px] md:bg-center 
       md:h-[200px]
       bg-[url('./assets/hero-banner.webp')] bg-bottom
     ">
